added load balancing startegies